--- a/source/sass/blocks/form-container.scss
+++ b/source/sass/blocks/form-container.scss
@@ -1,12 +1,7 @@
 .form-container__title {
   padding: 74px 0;
   background-color: $color-white-dark;
-  margin: 0 -30px;
   text-align: center;
-
-  @include tablet() {
-    margin: 0 -50px;
-  }
 }
 
 .form-container__description {
