--- a/source/sass/blocks/info.scss
+++ b/source/sass/blocks/info.scss
@@ -23,13 +23,13 @@
     content: " ";
     width: 100%;
     height: 24px;
-    background-image: url("../../img/background-images/wave-tablet.svg");
+    background-image: url("../img/background-images/wave-tablet.svg");
   }
 
   @include desktop {
     height: 34px;
     bottom: -17px;
-    background-image: url("../../img/background-images/wave-desktop.svg");
+    background-image: url("../img/background-images/wave-desktop.svg");
   }
 }
 
@@ -56,6 +56,7 @@
 .info__footer {
   @include tablet() {
     display: flex;
+    flex-wrap: wrap;
   }
 }
 
@@ -73,12 +74,14 @@
   @include tablet () {
     padding: 25px 0 46px 36px;
     margin: 0;
-    width: 100%;
+    width: 50%;
+    box-sizing: border-box;
   }
 }
 
 .info__button--lamp {
-  background-image: url("../../img/button-images/lamp.svg");
+  background-color: $color-aqua;
+  background-image: url("../img/button-images/lamp.svg");
   background-repeat: no-repeat;
   background-position: top 23px right 36px;
 
@@ -88,7 +91,8 @@
 }
 
 .info__button--cube {
-  background-image: url("../../img/button-images/cube.svg");
+  background-color: $color-aqua-dark;
+  background-image: url("../img/button-images/cube.svg");
   background-repeat: no-repeat;
   background-position: top 21px right 27px;
 
