--- a/source/sass/components/button.scss
+++ b/source/sass/components/button.scss
@@ -13,7 +13,7 @@
   cursor: pointer;
 
   &--primary {
-    padding: 16px 20px;
+    padding: 14px 20px;
     font-size: 18px;
     line-height: 20px;
     border: 2px solid $border;
